# automata-hw1

./: .gitignore  CMakeLists.txt  README.md
.github/scripts/: build_doc.sh  coverage.sh  release.sh
.github/workflows/: build.yml  codecov.yml  release.yml
benchmark/: .gitignore  build.in
doc/: Automata_HW1_2022-28022_report.tex
scripts/: cleanup.sh  common_functions.sh  compile.sh  generate_benchmark.py  generate_test.py  parenthesize.py  prepare_test.py  preprocess.py  run_all.sh  run_builder.sh  run_runner.sh  run_test.sh
src/: CMakeLists.txt  automata.cpp  automata.h  fixedset.hpp  main_Q1.cpp  main_Q2.cpp  main_builder.cpp  main_runner.cpp
test/: .gitignore  CMakeLists.txt  build.in  ref.a2  ref.q1  ref.q2  test.in  test.input.in  test.output.in
